samples/_failures_safe/1761138315_ff3f89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92a77035.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_92a77035.c:138:5: error: expected declaration or statement at end of input
  138 |     if (dist[target] == INT_MAX) {
      |     ^~
./samples/SAFE/__tmp_92a77035.c:138:5: error: expected declaration or statement at end of input
